# dive

./: .env-example  .gitignore  Cargo.toml  Containerfile  LICENSE  Makefile  base_claim.json  build.rs  builder.Containerfile  envars  olibox_rsa.openssh-privatekey  pi@proxy51.rt3.io  test-ssh-putty.ppk
frontend/: App.tsx  ctypes.ts  index.html  index.js  index.tsx  kilt.d.ts  package.json  tsconfig.json  types.ts
frontend/.parcel-cache/: 4a74e491952c388b.txt  ca07049f067fbcc9  lock.mdb
frontend/api/: backend.ts  credential.ts  localStorage.ts  session.ts
frontend/ui_components/: Admin.tsx  BoxSection.tsx  FooterSection.tsx  OperatorSection.tsx  UseCaseSection.tsx
frontend/ui_components/BoxSection/: CredentialClaim.tsx  index.tsx
frontend/util/: useAsyncValue.ts
src/: configuration.rs  dto.rs  error.rs  http_client.rs  htttp_client.rs  lib.rs  main.rs  routes.rs  test_utils.rs  utils.rs  wrapper.h
src/cmd/: configuration.rs  main.rs
src/cmd/ssi-server/: main.rs
src/crypto/: device.rs  manager.rs  mod.rs
src/device/: crypto.rs  error.rs  file_manager.rs  key_manager.rs  mod.rs
src/kilt/: did_helper.rs  error.rs  mod.rs  tx.rs  well_known_did_configuration.rs
src/routes/: challenge.rs  claim.rs  credential.rs  did.rs  dto.rs  mod.rs  payment.rs  request_handler.rs  tests.rs  use_case.rs  well_known_did_config.rs
src/server/: consts.rs  dto.rs  error.rs  htttp_client.rs  mod.rs  routes.rs  server.rs
test/: test.c
