[package]
name = "dive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ssi-server"
path = "src/cmd/ssi-server/main.rs"

[dependencies]
reqwest = { version = "0.11.22", features = [
    "cookies",
    "json",
    "rustls-tls",
], default-features = false }
actix-files = "0.6.2"
actix-web = "4"
base58 = "0.2.0"
bip39 = "2.0.0"
futures = "0.3.28"
hex = "0.4.3"
libc = "0.2.147"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
base64 = "0.21.2"
serde_as = "0.0.1"
serde_cbor = "0.11.2"
serde_json = "1.0.107"
serde_with = "3.3.0"
sodiumoxide = "0.2.7"
sp-core = "22.0.0"
sp-runtime = "25.0.0"
subxt = { version = "0.31.0", features = ["substrate-compat"] }
tokio = { version = "1.29", features = ["full"] }
rand = "0.8.5"
sha2 = "0.10.7"
url = "2.4.1"

[build-dependencies]
bindgen = "0.66.1"

[features]
hsm6 = []
